--- a/index.html
+++ b/index.html
@@ -437,5 +437,12 @@
     </footer>
 
     <script src="script.js"></script>
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/3.2.0/email.min.js"></script>
+    <script type="text/javascript">
+   (function(){
+      emailjs.init("dpZ3pwCRYfQij53g1"); // Replace with your EmailJS user ID
+   })();
+</script>
+
 </body>
 </html>
