--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
                     <div class="project-image">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                                <a href="https://github.com/Abhishekjeyakumar/Flight-scheduling-optimization" class="project-link"><i class="fab fa-github"></i></a>
+                                <a href="https://abhishekjeyakumar.github.io/To-Do-List/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                                <a href="https://github.com/Abhishekjeyakumar/To-Do-List" class="project-link"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                         <div class="project-placeholder">
@@ -287,23 +287,14 @@
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Flight Scheduling Optimization</h3>
+                        <h3 class="project-title">To Do List</h3>
                         <p class="project-description">
-                        Flight Schedule Optimizer with NLP Queries is a Streamlit-based dashboard that integrates offline Excel datasets and live AviationStack API for flight data.
-                        It cleans, normalizes, and enriches flight schedules while automatically handling missing or inconsistent values.
-                        Users can ask natural language queries (e.g., "average delay", "worst airline") to get instant insights.
-                        The app also provides interactive visualizations such as delay trends, busiest hours, and airline comparisons.
-                        It helps identify delays, optimize scheduling, and support data-driven decision-making for flight operations.
+                       A modern, responsive web application built with HTML, CSS, and JavaScript that allows users to manage tasks efficiently. Users can add and delete tasks dynamically, with support for both button clicks and Enter key input. The app features a clean UI with animations, responsive design, and accessibility enhancements.
                         </p>
                         <div class="project-tech">
-                            <span class="tech-tag">Python</span>
-                            <span class="tech-tag">NLP</span>
-                            <span class="tech-tag"> Streamlit </span>
-                            <span class="tech-tag"> AviationStack API</span>
-                            <span class="tech-tag">Pandas</span>
-                            <span class="tech-tag">Numpy</span>
-                            <span class="tech-tag">Seaborn</span>
-                            <span class="tech-tag">Time-series analytics algorithms.</span>
+                         <span class="tech-tag">Html</Html></span>
+                        <span class="tech-tag">css</span>
+                            <span class="tech-tag">JavaScript</span>
 
 
                         </div>
