Update Live Server port setting in settings.json

--- a/index.html
+++ b/index.html
@@ -187,6 +187,31 @@
                     <div class="project-image">
                         <div class="project-overlay">
                             <div class="project-links">
+                                <a href="https://abhishekjeyakumar.github.io/NoteFlow/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                                <a href="https://abhishekjeyakumar.github.io/NoteFlow/" class="project-link"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>
+                        <div class="project-placeholder">
+                            <i class="fas fa-mobile-alt"></i>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">NotesFlow</h3>
+                        <p class="project-description">
+                        A sleek, responsive web app built with HTML, CSS, and JavaScript that lets users create, view, and delete notes instantly. Features a clean UI, pop-up note forms, and a responsive layout for both desktop and mobile. Perfect for managing daily tasks or jotting down ideas on the go.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Html</Html></span>
+                            <span class="tech-tag">css</span>
+                            <span class="tech-tag">JavaScript</span>
+                            
+                        </div>
+                    </div>
+                </div>
+                 <div class="project-card">
+                    <div class="project-image">
+                        <div class="project-overlay">
+                            <div class="project-links">
                                 <a href="https://abhishekjeyakumar.github.io/Youtubeclone/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
                                 <a href="https://github.com/Abhishekjeyakumar/Youtubeclone" class="project-link"><i class="fab fa-github"></i></a>
                             </div>
