Update index.html with improved portfolio and certification section

--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
                                 <span class="skill-tag">Git</span>
                                 <span class="skill-tag">Canva</span>
                                 <span class="skill-tag">Capcut</span>
-                                <span class="skill-tag">Figma</span>
-                                <span class="skill-tag">Webpack</span>
+                                <span class="skill-tag">Android Studio</span>
                             </div>
                         </div>
                     </div>
@@ -289,6 +288,33 @@
                          <span class="tech-tag">Html</Html></span>
                         <span class="tech-tag">css</span>
                             <span class="tech-tag">JavaScript</span>
+
+
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://github.com/Abhishekjeyakumar/Logo-Design" class="project-link"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>
+                        <div class="project-placeholder">
+                            <i class="fas fa-code"></i>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Shivsakthi School Logo Design</h3>
+                        <p class="project-description">
+                            Designed two original logo concepts for Shivsakthi School to represent its core values of knowledge, leadership, and achievement.
+                            The first concept emphasizes bravery, wisdom, and victory with a strong emblem and laurel wreath.
+                            The second highlights Dr. A.P.J. Abdul Kalam as an icon of inspiration, with the tagline “Learn Today Lead Tomorrow.”
+                            Both designs were created for use across branding, print, and digital platforms.                        </p>
+                        <div class="project-tech">
+                         <span class="tech-tag">Canva</Html></span>
+                        <span class="tech-tag">Google Fonts</span>
+                        
 
 
                         </div>
