--- a/index.html
+++ b/index.html
@@ -174,6 +174,35 @@
                         </div>
                     </div>
                 </div>
+                 <div class="project-card">
+                    <div class="project-image">
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://abhishekjeyakumar.github.io/Askme/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                                <a href="https://github.com/Abhishekjeyakumar/Askme" class="project-link"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>
+                        <div class="project-placeholder">
+                            <i class="fas fa-code"></i>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Ask me - AI Chatbot Using React + Vite</h3>
+                        <p class="project-description">
+                        AskMe is an interactive AI-powered chatbot built using React and Vite.
+                        It provides a simple and responsive user interface for users to chat with an AI assistant in real time.
+                        The project demonstrates how modern frontend tools and APIs can be combined to create an intelligent conversational experience.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">React</span>
+                            <span class="tech-tag">Vite</span>
+                            <span class="tech-tag"> CSS </span>
+                            <span class="tech-tag"> AI</span>
+
+
+                        </div>
+                    </div>
+                </div>
 
                 <div class="project-card">
                     <div class="project-image">
